# vouch-protocol

./: .gitignore  .npmrc  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  PLAN.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  STRATEGY.md  package.json  pnpm-lock.yaml  tsconfig.anchor.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
apps/verifier/: .env.example  package.json
apps/verifier/src/: index.ts  sign.ts  types.ts  verify.ts
apps/web/: .env.example  LOCAL_TESTING.md  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  tailwind.config.js  vercel.json  vitest.config.ts
apps/web/e2e/: developer.spec.ts  error-handling.spec.ts  homepage.spec.ts  navigation.spec.ts  whale.spec.ts
apps/web/src/: middleware.ts  proxy.ts
circuits/: Nargo.toml
circuits/dev_reputation/: Nargo.toml  Prover.toml
circuits/dev_reputation/src/: main.nr
circuits/vouch_lib/: Nargo.toml
circuits/vouch_lib/src/: lib.nr
circuits/whale_trading/: Nargo.toml  Prover.toml
circuits/whale_trading/src/: main.nr
docs/: LOCAL_TESTING.md  PRODUCTION_ROADMAP.md  RUNBOOK.md  SECURITY_AUDIT_PREP.md  SECURITY_AUDIT_REPORT.md
keys/: README.md  test-wallet.json
programs/vouch-verifier/: Cargo.toml
programs/vouch-verifier/src/: lib.rs
scripts/: add-token-metadata.ts  anchor-test.sh  create-campaign-v2.ts  create-devnet-campaign.ts  fix-config-layout.ts  fund-campaign.ts  local-test.sh  migrate-config.ts  run-fix-config.ts  setup-verifier.ts  sync-idl.js  test-verifier-api.ts
tests/: vouch-verifier.ts
(+76 files in other folders)
