[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin dependencies to versions compatible with Solana SDK toolchain (Cargo 1.84)
[workspace.dependencies]
constant_time_eq = "0.3.1"
