[package]
name = "vouch-verifier"
version = "0.1.0"
description = "Vouch Protocol - ZK Proof Verifier for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vouch_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-sdk-ids = "2.2"
